--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc2"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "app.spotify.nanodegree.iandouglas.com.spotifystreamer"
-        minSdkVersion 19
-        targetSdkVersion 22
+        applicationId "com.iandouglas.spotifystreamer.app"
+        minSdkVersion 11
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -19,7 +19,20 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    flatDir{
+        dirs 'libs'
+    }
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile fileTree(dir: 'libs', include: ['*.jar']) // this line is already created in Android Studio
+    compile 'com.android.support:appcompat-v7:22.2.0' // you may need this line when targeting earlier Android APIs
+
+    // third party libs
+    compile(name:'spotify-web-api-android-0.1.0', ext:'aar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
 }
